# Operation-PolinRider

./: .gitignore  Dockerfile  README.md  action.yml  pyproject.toml
.github/workflows/: main.yml  polinrider-guard.yml
docs/: ENTERPRISE_RECOVERY.md  GITHUB_PROTECTION.md  THREAT_MODEL.md
examples/: polinrider-action.yml
examples/clean-project/: index.js
examples/vulnerable-samples/: app.js
scripts/: batch-clean.sh  polinrider-guard.py  scan-git-dates.py  scan-masquerade.py  scan-unicode.py  scan-vscode-tasks.py  surgical-clean.py
src/polinrider_guard/: __init__.py  cli.py  git_dates.py  masquerade.py  models.py  unicode_scan.py  vscode_tasks.py  walk.py  yara_scanner.py
src/polinrider_guard/rules/: polinrider.yar
tests/: test_cli_and_scripts.py  test_coverage_gap.py  test_git_dates.py  test_github_workflow.py  test_masquerade.py  test_recovery.py  test_unicode_scan.py  test_vscode_tasks.py  test_walk.py  test_yara_scanner.py
